# lambdas

./: .prettierignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  renovate.json
.github/workflows/: ci.yml
aws-sso-google-sync/: Cargo.toml  README.md  test.json
aws-sso-google-sync/src/: event.rs  main.rs  sync.rs
aws-sso-google-sync/src/aws/: mod.rs  scim.rs  smc.rs
aws-sso-google-sync/src/google/: admin.rs  mod.rs
delete-unnused-aws-loggroups/: Cargo.toml  README.md  test.json
delete-unnused-aws-loggroups/src/: main.rs
delete-unnused-aws-loggroups/src/aws/: codebuild.rs  lambda.rs  logs.rs  mod.rs
export-loggroups-to-s3/: Cargo.toml  README.md  test.json
export-loggroups-to-s3/src/: event.rs  main.rs
export-loggroups-to-s3/src/aws/: lambda.rs  logs.rs  mod.rs
rotate-google-service-user/: Cargo.toml  README.md  test.json
rotate-google-service-user/src/: main.rs
rotate-google-service-user/src/google/: iam.rs  mod.rs
slack-webhook-to-eventbridge/: Cargo.toml  README.md
slack-webhook-to-eventbridge/src/: event.rs  main.rs  response.rs
slack-webhook-to-eventbridge/tests/: event_v1_01.json  event_v2_03.json
slack-webhook-to-eventbridge/tests/aws/: .gitignore  _input.tf  build_headers.sh  event_bridge.tf  lambda.tf  lambda_invocation.tf  lambda_log_group.tf  lambda_role.tf  secrets.tf  sns.tf
