[package]
name = "export-loggroups-to-s3"
version = "1.0.5"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2021"
description = "Exports CloudWatch LogGroups to S3 once a day"
license = "MIT OR Apache-2.0"
repository = "https://github.com/itmettkeDE/lambdas"
readme = "./README.md"
keywords = ["lambda", "AWS", "CloudWatch", "log group", "export", "S3"]
categories = ["command-line-utilities"]

[features]
test = ["lambda-runtime-types/test"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
lambda-runtime-types = { version = "0.6", default-features = false }
log = "0.4"
rand = "0.8"
rusoto_core = { version = "0.48", default-features = false, features = ["rustls"] }
rusoto_lambda = { version = "0.48", default-features = false, features = ["rustls"] }
rusoto_logs = { version = "0.48", default-features = false, features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "2"
tokio = "1"
